Fix video control overlap issue

--- a/static/main.css
+++ b/static/main.css
@@ -846,7 +846,7 @@ table, th, td {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: -1rem;
+    margin-top: -.2rem;
     padding: 1rem 0 .5rem;
     background: rgba(0,0,0, .3);
     pause-before:
